--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-reader": "^0.13.3"
+    "react-reader": "^0.13.3",
+    "react-router-dom": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
